# intellectus

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
atk/: __init__.py
atk/cli/: __init__.py  challenge.py  review.py  run.py
atk/core/: __init__.py  generation.py  llm.py  review.py
atk/languages/: __init__.py  cpp.py  python.py  sql.py
atk/runtime/: __init__.py  engine.py  images.py  sandbox.py
atk/runtime/containerfiles/: cpp.Containerfile  python.Containerfile
atk/runtime/runners/: __init__.py  cpp.py  python.py  sql.py
c++/: README.md
documentation/: adding-a-language.md  challenge.md  containers.md  getting-started.md  review.md
interests/c++/challenges/blossom_garden/: challenge.cpp
interests/c++/challenges/blossom_garden_2/: challenge.cpp
interests/c++/exercises/: ABCs.txt  All Wrong.txt  Battleship.txt  Length of Last Word.txt  Merge Sorted Array.txt  Remove Element.txt  Roman to Integer.txt  Three Consecutive Odds.txt  findMaxConsecutiveOnes.txt
interests/python/challenges/bookish_badger/: challenge.py
interests/python/challenges/butterfly_garden/: challenge.py
interests/python/challenges/frosty_journey/: challenge.py
interests/python/challenges/frosty_vortex/: challenge.py
interests/sql/: README.md  setup.md
python/: README.md
python/docs/: challenge.md  review.md
python/magic_numbers/: challenge.py
python/magic_numbers/reviews/: review-20260707-225105.md  review-20260707-230218.md
setup/: initialize.sh
system/: initialize.sh  llm.py
system/skills/: challenge.py  review.py
(+22 files in other folders)
