[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "intellectus"
version = "0.1.0"
description = "The autodidact's toolkit: a fully local practice gym - generate, solve, and review coding challenges."
requires-python = ">=3.12"
dependencies = [
    "click",
    "requests",
]

[project.scripts]
atk = "atk.cli:cli"
intellectus = "atk.cli:cli"

[tool.setuptools]
packages = [
    "atk",
    "atk.cli",
    "atk.core",
    "atk.languages",
    "atk.runtime",
    "atk.runtime.runners",
]
